fixing the overflow issue

--- a/assets/css/src/main.scss
+++ b/assets/css/src/main.scss
@@ -34,7 +34,7 @@
 		z-index: -1;
 		content: '';
 		border-right: solid 100vw $riptide;
-		border-left: solid 100vw transparent;
+		border-left: solid 0 transparent;
 		border-top: solid 100vh transparent;
 		position: absolute;
 		right: 0;
@@ -45,7 +45,7 @@
 		z-index: -2;
 		content: '';
 		border-left: solid 100vw $cape-honey;
-		border-right: solid 100vw transparent;
+		border-right: solid 0 transparent;
 		border-bottom: solid 100vh transparent;
 		position: absolute;
 		left: 0;
@@ -66,7 +66,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $jordy-blue;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -77,7 +77,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $riptide;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
@@ -90,7 +90,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $confetti;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -101,7 +101,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $jordy-blue;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
@@ -114,7 +114,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $pumice;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -125,7 +125,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $confetti;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
@@ -138,7 +138,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $flamingo;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -149,7 +149,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $pumice;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
@@ -162,7 +162,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $wistful;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -173,7 +173,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $flamingo;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
@@ -186,7 +186,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $wax-flower;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -197,7 +197,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $wistful;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
@@ -210,7 +210,7 @@
 			z-index: -1;
 			content: '';
 			border-right: solid 100vw $cape-honey;
-			border-left: solid 100vw transparent;
+			border-left: solid 0 transparent;
 			border-top: solid 100vh transparent;
 			position: absolute;
 			right: 0;
@@ -221,7 +221,7 @@
 			z-index: -2;
 			content: '';
 			border-left: solid 100vw $wax-flower;
-			border-right: solid 100vw transparent;
+			border-right: solid 0 transparent;
 			border-bottom: solid 100vh transparent;
 			position: absolute;
 			left: 0;
